--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "webpack --config ./webpack.prod.js --progress",
-    "dev": "webpack-dev-server --config ./webpack.dev.js --verbose --progress",
+    "dev": "webpack serve --config ./webpack.dev.js --progress --stats verbose",
     "build:stats": "webpack --config ./webpack.prod.js  --profile --json > stats.json",
     "test:e2e": "cypress run",
     "test:server": "PRIVATE_KEY=7c6e602a94f30e4ea7edabe4376314f69ba7eaa2f355ecedb339df847b6f0d80575f81ffb0a297b7725dc671da0b1769b1fc5cbe45385c7b5ad1fc2eaf1d609d PUBLIC_KEY=ak_fUq2NesPXcYZ1CcqBcGC3StpdnQw3iVxMA3YSeCNAwfN4myQk webpack --config ./webpack.test.js --progress && serve ./dist -l 8081",
@@ -11,54 +11,56 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@aeternity/aepp-components": "git+https://github.com/aeternity/aepp-components.git#develop",
-    "@aeternity/aepp-sdk": "^7.4.2",
-    "axios": "^0.19.2",
+    "@aeternity/aepp-components": "^2.0.15",
+    "@aeternity/aepp-sdk": "^9.0.1",
+    "axios": "^0.22.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-transform-block-scoping": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/runtime": "^7.9.6",
-    "@fullhuman/postcss-purgecss": "^2.2.0",
-    "autoprefixer": "^9.8.0",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.1.0",
-    "browserslist": "^4.12.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "core-js": "^3.6.5",
-    "css-loader": "^3.5.3",
-    "cssnano": "^4.1.10",
-    "cypress": "^4.6.0",
-    "favicons-webpack-plugin": "^3.0.1",
-    "file-loader": "^6.0.0",
+    "browserslist": "^4.17.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.18.2",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.3.0",
+    "cssnano": "^5.0.8",
+    "cypress": "^8.5.0",
+    "favicons": "^6.2.2",
+    "favicons-webpack-plugin": "^5.0.2",
     "glob-all": "^3.2.1",
-    "html-webpack-harddisk-plugin": "^1.0.1",
-    "html-webpack-plugin": "^4.3.0",
-    "node-sass": "^4.14.1",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.3.2",
+    "node-sass": "^6.0.1",
+    "path-browserify": "^1.0.1",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.1.1",
     "precss": "^4.0.0",
-    "purgecss-webpack-plugin": "^2.2.0",
-    "raw-loader": "^4.0.1",
-    "sass-loader": "^8.0.2",
-    "serve": "^11.3.0",
+    "process": "^0.11.10",
+    "purgecss-webpack-plugin": "^4.0.3",
+    "sass-loader": "^12.1.0",
+    "serve": "^12.0.1",
     "start-server-and-test": "^1.11.0",
-    "tailwindcss": "^1.4.6",
+    "stream-browserify": "^3.0.0",
+    "tailwindcss": "^2.2.16",
     "vue-loader": "^15.9.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-serve": "^3.2.0"
+    "webpack": "^5.57.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   },
   "browserslist": [
     "> 1%",
