--- a/package.json
+++ b/package.json
@@ -2,71 +2,53 @@
   "name": "aepp-boilerplate",
   "version": "0.1.0",
   "scripts": {
-    "build": "webpack --config ./webpack.prod.js --progress",
-    "dev": "webpack serve --config ./webpack.dev.js --progress --stats verbose",
-    "build:stats": "webpack --config ./webpack.prod.js  --profile --json > stats.json",
-    "test:e2e": "cypress run",
-    "test:server": "PRIVATE_KEY=7c6e602a94f30e4ea7edabe4376314f69ba7eaa2f355ecedb339df847b6f0d80575f81ffb0a297b7725dc671da0b1769b1fc5cbe45385c7b5ad1fc2eaf1d609d PUBLIC_KEY=ak_fUq2NesPXcYZ1CcqBcGC3StpdnQw3iVxMA3YSeCNAwfN4myQk webpack --config ./webpack.test.js --progress && serve ./dist -l 8081",
-    "test": "start-server-and-test test:server http://localhost:8081 test:e2e"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e --mode e2e",
+    "lint": "vue-cli-service lint"
   },
-  "license": "ISC",
   "dependencies": {
-    "@aeternity/aepp-components": "^2.0.15",
-    "@aeternity/aepp-sdk": "^9.0.1",
-    "axios": "^0.22.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "@aeternity/aepp-sdk": "^10.0.0",
+    "core-js": "^3.6.5",
+    "file-loader": "^6.2.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-transform-block-scoping": "^7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/runtime": "^7.9.6",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "autoprefixer": "^10.3.7",
-    "babel-loader": "^8.1.0",
-    "browserslist": "^4.17.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "core-js": "^3.18.2",
-    "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.3.0",
-    "cssnano": "^5.0.8",
-    "cypress": "^8.5.0",
-    "favicons": "^6.2.2",
-    "favicons-webpack-plugin": "^5.0.2",
-    "glob-all": "^3.2.1",
-    "html-webpack-harddisk-plugin": "^2.0.0",
-    "html-webpack-plugin": "^5.3.2",
-    "node-sass": "^6.0.1",
-    "path-browserify": "^1.0.1",
-    "postcss-import": "^14.0.2",
-    "postcss-loader": "^6.1.1",
-    "precss": "^4.0.0",
-    "process": "^0.11.10",
-    "purgecss-webpack-plugin": "^4.0.3",
-    "sass-loader": "^12.1.0",
-    "serve": "^12.0.1",
-    "start-server-and-test": "^1.11.0",
-    "stream-browserify": "^3.0.0",
-    "tailwindcss": "^2.2.16",
-    "vue-loader": "^15.9.2",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^5.57.1",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-merge": "^5.8.0"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-plugin": "^4.2.0",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/test-utils": "^2.0.0-0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "lint-staged": "^9.5.0",
+    "vue-jest": "^5.0.0-0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8",
-    "maintained node versions",
     "not dead"
-  ]
+  ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "license": "ISC",
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
