--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
+.DS_Store
 node_modules
+/dist
+/coverage
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
 .idea
-tailwind.css
-dist
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
