--- a/.github/workflows/ci.action.yml
+++ b/.github/workflows/ci.action.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16.x]
+        node-version: [14.x, 16.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -21,7 +21,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - run: npx cypress install
-      - run: npm run test:e2e
-      - run: npm run test:unit
+      - name: Run Unit Tests
+        run: yarn test:unit
+      - name: Run e2e Tests
+        run: yarn test:e2e
+      - name: Run Build
+        run: yarn build
