--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aepp-boilerplate",
+  "name": "aepp-boilerplate-vue",
   "version": "0.1.0",
   "scripts": {
     "serve": "npm run serve:testnet",
