refactor: use verbose names for env variables

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-VUE_APP_TYPE=ae_uat
-VUE_APP_NAME=testnet
-VUE_APP_URL=https://testnet.aeternity.io
+VUE_APP_NETWORK_ID=ae_uat
+VUE_APP_NETWORK_NAME=testnet
+VUE_APP_NODE_URL=https://testnet.aeternity.io
