--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_TYPE=ae_mainnet
-VUE_APP_NAME=mainnet
-VUE_APP_URL=https://mainnet.aeternity.io
+VUE_APP_NETWORK_ID=ae_mainnet
+VUE_APP_NETWORK_NAME=mainnet
+VUE_APP_NODE_URL=https://mainnet.aeternity.io
