--- a/.github/workflows/ci.action.yml
+++ b/.github/workflows/ci.action.yml
@@ -1,26 +1,34 @@
-name: Vue CI
+name: Test, build, and deploy to GH pages
 
-on:
-  push:
-    branches:
-      - "*"
+on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [14.x, 15.x, 16.x]
+        node-version: [16.x, 18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+      - uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
-      - run: npm run test:e2e
+      - run: npm run lint
       - run: npm run test:unit
+      - run: npm run test:e2e
+      - run: npm run build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/master' && matrix.node-version == '18.x'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
