--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve:mainnet": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e --e2e --headless --mode e2e",
+    "test:e2e": "vue-cli-service test:e2e --headless --mode e2e",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
